# Tidal

./: cabal.project  cabal.project.freeze  hie.yaml  tidal.cabal  tidal.el
src/Sound/: Tidal.hs
src/Sound/Tidal/: ParseBP.hs
tidal-parse/: tidal-parse.cabal
